2018-05-03  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1044
	
	* src/absorption.cc:  Changed interface for binary-speedup 
	calculations.  Still needs some more work to check errors
	
	* src/linefunctions.{cc,h}:  Moved away from the arrays 
	for derivatives, allowing all functions to drop the range
	input.  Also changed binary-speedup to act outside of the
	main line functionality
	
	* src/linerecord.{cc,h}:  Changed binary speedup parameters
	
	* src/matpackI.{cc,h}:  Added ostream output for Range to
	help debugging..
	
2018-05-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1043

	* TODO: Let's use this file to make notes about Todo-s until we
	have decided what ticket system to use. And maybe we need this
	file anyhow, to keep track of things that either of larger scope
	or don't yet have a clear owner.

	Added two points.

	* src/rte.cc (ext2trans): The code from Landi Degl'Innocenti and
	Landolfi (2004) is now used only for stokes_dim==2. Did not work
	for stokes_dim==3, as reported by Jana.

2018-05-01 Jana Mendrok  <jana.mendrok@gmail.com>

	* arts-2-3-1042

	* src/optproperties.[cc,h] (ssd_tinterp_parameters):
	Outsourced identical code from *1ScatElem for temp interpolation
	preparation.

	(opt_prop_1ScatElem, pha_mat_1ScatElem):
	Use ssd_tinterp_parameters function.

	(pha_mat_1ScatElem):
	Revised PTYPE_AZIMUTH_RND branch, simplifying stokes_dim optimized code.

	(FouComp_1ScatElem):
	Work in progress.
	Separate method for extracting Fourier series components per scat element
	from scat_data. No sense in first ectracting pha_mat, then deriving
	fourier component(s) from that either degrading or blowing up data.
	Instead derive it directly from scat_data's pha_mat_data. So far only up
	to stokes_dim=2 and 0th Fourier component as required for RT4.

	* src/rt4.cc (run_rt4_new):
	Work in progress (so far moslty a working copy of run_rt4) for RT4 using
	unified scattering data scheme throughout.
